tests/ui/free_stmt.stderr
error[E0505]: cannot move out of `conn` because it is borrowed
  --> $DIR/free_stmt.rs:43:35
   |
40 |     SQLAllocHandle(SQL_HANDLE_STMT, &conn, &mut stmt);
   |                                     ----- borrow of `conn` occurs here
...
43 |     SQLFreeHandle(SQL_HANDLE_DBC, conn);
   |                                   ^^^^ move out of `conn` occurs here
44 |     SQLFreeHandle(SQL_HANDLE_STMT, stmt);
   |                                    ---- borrow later used here
